Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTICARDVB.BAS

Public Declare Function BTICard_CoProcMemRdsW Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcMemRdW Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemRdW@12" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcMemWrL Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemWrL@12" (ByVal value As Long, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcMemWrsL Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemWrsL@16" (ByRef valueptr As Long, ByVal addrval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcMemWrsW Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Long, ByVal count As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoProcMemWrW Lib "BTICARD.DLL" Alias "_BTICard_CoProcMemWrW@12" (ByVal value As Integer, ByVal addrval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_CoreOpen Lib "BTICARD.DLL" Alias "_BTICard_CoreOpen@12" (ByRef lphcore As Long, ByVal corenum As Long, ByVal hcard As Long) As Long
Public Declare Sub BTICard_DARClr Lib "BTICARD.DLL" Alias "_BTICard_DARClr@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long)
Public Declare Function BTICard_DARGet Lib "BTICARD.DLL" Alias "_BTICard_DARGet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_DARRdL Lib "BTICARD.DLL" Alias "_BTICard_DARRdL@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTICard_DARRdsW Lib "BTICARD.DLL" Alias "_BTICard_DARRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function BTICard_DARRdW Lib "BTICARD.DLL" Alias "_BTICard_DARRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_DARSet Lib "BTICARD.DLL" Alias "_BTICard_DARSet@12" (ByVal maskval As Integer, ByVal addrval As Integer, ByVal handleval As Long)
Public Declare Sub BTICard_DARWrL Lib "BTICARD.DLL" Alias "_BTICard_DARWrL@12" (ByVal value As Long, ByVal addrval As Integer, ByVal handleval As Long)
Public Declare Sub BTICard_DARWrsW Lib "BTICARD.DLL" Alias "_BTICard_DARWrsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_DARWrW Lib "BTICARD.DLL" Alias "_BTICard_DARWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long)
Public Declare Function BTICard_Div Lib "BTICARD.DLL" Alias "_BTICard_Div@8" (ByVal diva As Long, ByVal divb As Long) As Long
Public Declare Sub BTICard_Div64 Lib "BTICARD.DLL" Alias "_BTICard_Div64@24" (ByRef resulth As Long, ByRef resultl As Long, ByVal valah As Long, ByVal valal As Long, ByVal valbh As Long, ByVal valbl As Long)
Public Declare Function BTICard_DllUsageCount Lib "BTICARD.DLL" Alias "_BTICard_DllUsageCount@0" () As Long
Public Declare Function BTICard_DspBioClear Lib "BTICARD.DLL" Alias "_BTICard_DspBioClear@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_DspBioRd Lib "BTICARD.DLL" Alias "_BTICard_DspBioRd@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_DspBioSet Lib "BTICARD.DLL" Alias "_BTICard_DspBioSet@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_DspIntfClear Lib "BTICARD.DLL" Alias "_BTICard_DspIntfClear@8" (ByVal intmask As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_DspIntfRd Lib "BTICARD.DLL" Alias "_BTICard_DspIntfRd@8" (ByVal intmask As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_DspIntmClear Lib "BTICARD.DLL" Alias "_BTICard_DspIntmClear@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_DspIntmSet Lib "BTICARD.DLL" Alias "_BTICard_DspIntmSet@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_DspXfClear Lib "BTICARD.DLL" Alias "_BTICard_DspXfClear@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_DspXfRd Lib "BTICARD.DLL" Alias "_BTICard_DspXfRd@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_DspXfSet Lib "BTICARD.DLL" Alias "_BTICard_DspXfSet@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_ErrDesc Lib "BTICARD.DLL" Alias "_BTICard_ErrDesc@8" (ByVal errval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_ErrDescStr Lib "BTICARD.DLL" Alias "_BTICard_ErrDescStr@8" (ByVal errval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_ErrName Lib "BTICARD.DLL" Alias "_BTICard_ErrName@8" (ByVal errval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_EventLogClear Lib "BTICARD.DLL" Alias "_BTICard_EventLogClear@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_EventLogConfig Lib "BTICARD.DLL" Alias "_BTICard_EventLogConfig@12" (ByVal configval As Integer, ByVal count As Integer, ByVal handleval As Long) As Long
Public Declare Function BTICard_EventLogRd Lib "BTICARD.DLL" Alias "_BTICard_EventLogRd@16" (ByRef typevalval As Integer, ByRef infoval As Long, ByRef channel As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_EventLogStatus Lib "BTICARD.DLL" Alias "_BTICard_EventLogStatus@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_ExpandMant Lib "BTICARD.DLL" Alias "_BTICard_ExpandMant@8" (ByRef mant As Long, ByRef exp As Long)
Public Declare Function BTICard_ExtDinRd Lib "BTICARD.DLL" Alias "_BTICard_ExtDinRd@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_ExtDinWr Lib "BTICARD.DLL" Alias "_BTICard_ExtDinWr@8" (ByVal dinval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_ExtDIODirSet Lib "BTICARD.DLL" Alias "_BTICard_ExtDIODirSet@12" (ByVal dionum As Long, ByVal dirval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_ExtDIOEnWr Lib "BTICARD.DLL" Alias "_BTICard_ExtDIOEnWr@16" (ByVal dionum As Long, ByVal dioval As Long, ByVal dioen As Long, ByVal handleval As Long)
Public Declare Function BTICard_ExtDIOMonConfig Lib "BTICARD.DLL" Alias "_BTICard_ExtDIOMonConfig@16" (ByVal rise_edge As Integer, ByVal fall_edge As Integer, ByVal banknum As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_ExtDIORd Lib "BTICARD.DLL" Alias "_BTICard_ExtDIORd@8" (ByVal dionum As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICard_ExtDIOWr Lib "BTICARD.DLL" Alias "_BTICard_ExtDIOWr@12" (ByVal dionum As Long, ByVal dioval As Long, ByVal handleval As Long)
Public Declare Function BTICard_ExtLEDRd Lib "BTICARD.DLL" Alias "_BTICard_ExtLEDRd@4" (ByVal handleval As Long) As Long
Public Declare Sub BTICard_ExtLEDWr Lib "BTICARD.DLL" Alias "_BTICard_ExtLEDWr@8" (ByVal ledval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_ExtStatusLEDRd Lib "BTICARD.DLL" Alias "_BTICard_ExtStatusLEDRd@12" (ByRef ledon As Long, ByRef ledcolor As Long, ByVal handleval As Long)
Public Declare Sub BTICard_ExtStatusLEDWr Lib "BTICARD.DLL" Alias "_BTICard_ExtStatusLEDWr@12" (ByVal ledon As Long, ByVal ledcolor As Long, ByVal handleval As Long)
Public Declare Sub BTICard_FileClose Lib "BTICARD.DLL" Alias "_BTICard_FileClose@4" (ByVal handle As Long)
Public Declare Function BTICard_FileErr Lib "BTICARD.DLL" Alias "_BTICard_FileErr@0" () As Long
Public Declare Sub BTICard_FileErrClr Lib "BTICARD.DLL" Alias "_BTICard_FileErrClr@0" ()
Public Declare Sub BTICard_FileErrSet Lib "BTICARD.DLL" Alias "_BTICard_FileErrSet@0" ()
Public Declare Function BTICard_FileOpenRead Lib "BTICARD.DLL" Alias "_BTICard_FileOpenRead@4" (ByRef filename As String) As Long
Public Declare Function BTICard_FileOpenWrite Lib "BTICARD.DLL" Alias "_BTICard_FileOpenWrite@4" (ByRef filename As String) As Long
Public Declare Function BTICard_FileRead Lib "BTICARD.DLL" Alias "_BTICard_FileRead@12" (ByVal handle As Long, ByVal buffer As Long, ByVal count As Integer) As Long
Public Declare Function BTICard_FileSeek Lib "BTICARD.DLL" Alias "_BTICard_FileSeek@8" (ByVal handle As Long, ByVal offset As Long) As Long
Public Declare Function BTICard_FileTell Lib "BTICARD.DLL" Alias "_BTICard_FileTell@4" (ByVal handle As Long) As Long
Public Declare Function BTICard_FileWrite Lib "BTICARD.DLL" Alias "_BTICard_FileWrite@12" (ByVal handle As Long, ByVal buffer As Long, ByVal count As Integer) As Long
Public Declare Function BTICard_GetHigh Lib "BTICARD.DLL" Alias "_BTICard_GetHigh@4" (ByVal val As Long) As Integer
Public Declare Function BTICard_GetLow Lib "BTICARD.DLL" Alias "_BTICard_GetLow@4" (ByVal val As Long) As Integer
Public Declare Function BTICard_GlobalRdW Lib "BTICARD.DLL" Alias "_BTICard_GlobalRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_GlobalWrW Lib "BTICARD.DLL" Alias "_BTICard_GlobalWrW@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Long)
Public Declare Function BTICard_HandleInfoEx Lib "BTICARD.DLL" Alias "_BTICard_HandleInfoEx@12" (ByRef valueptr As Long, ByVal typeval As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_HandleIsCard Lib "BTICARD.DLL" Alias "_BTICard_HandleIsCard@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_HandleIsCore Lib "BTICARD.DLL" Alias "_BTICard_HandleIsCore@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_HandleMakeCard Lib "BTICARD.DLL" Alias "_BTICard_HandleMakeCard@12" (ByRef lphcard As Long, ByRef lpcorenum As Long, ByVal hcore As Long) As Long
Public Declare Function BTICard_HandleMakeCore Lib "BTICARD.DLL" Alias "_BTICard_HandleMakeCore@12" (ByRef lphcore As Long, ByVal corenum As Long, ByVal hcard As Long) As Long
Public Declare Function BTICard_HandleMakeRPC Lib "BTICARD.DLL" Alias "_BTICard_HandleMakeRPC@12" (ByRef hcard_remote As Long, ByRef lphrpc As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_HandleOkay Lib "BTICARD.DLL" Alias "_BTICard_HandleOkay@4" (ByVal handleval As Long) As Long
Public Declare Function BTICard_HeapAlloc Lib "BTICARD.DLL" Alias "_BTICard_HeapAlloc@12" (ByVal section As Long, ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_HeapAllocAll Lib "BTICARD.DLL" Alias "_BTICard_HeapAllocAll@12" (ByVal section As Long, ByRef wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_HeapAllocEx Lib "BTICARD.DLL" Alias "_BTICard_HeapAllocEx@16" (ByVal configval As Integer, ByVal section As Long, ByVal wordcount As Long, ByVal handleval As Long) As Long
Public Declare Function BTICard_HeapWipe Lib "BTICARD.DLL" Alias "_BTICard_HeapWipe@8" (ByVal section As Long, ByVal handleval As Long) As Long
Public Declare Sub BTICard_HPIFill Lib "BTICARD.DLL" Alias "_BTICard_HPIFill@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function BTICard_HPIRdL Lib "BTICARD.DLL" Alias "_BTICard_HPIRdL@8" (ByVal addrval As Integer, ByVal handleval As Long) As Long
Public Declare Sub BTICard_HPIRdsL Lib "BTICARD.DLL" Alias "_BTICard_HPIRdsL@16" (ByRef valueptr As Long, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Sub BTICard_HPIRdsW Lib "BTICARD.DLL" Alias "_BTICard_HPIRdsW@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Long, ByVal handleval As Long)
Public Declare Function BTICard_HPIRdW Lib "BTICARD.DLL" Alias "_BTICard_HPIRdW@8" (ByVal addrval As Integer, ByVal handleval As Long) As Integer
Public Declare Sub BTICard_HPIWrL Lib "BTICARD.DLL" Alias "_BTICard_HPIWrL@12" (ByVal value As Long, ByVal addrval As Integer, ByVal handleval As Long)
